fix display issues with scrollbars

--- a/app.css
+++ b/app.css
@@ -51,10 +51,10 @@ width:calc(100% - 300px - 2 * 30px - 2 * 40px - 2px);
   display:none;
   height:100%;
   width:100%;
-/*  overflow-y:scroll;*/
+  overflow-y:auto;
 }
 #feedentries {
-height:calc(100% - 44px - 5px); /*height of feedbar */
+height:calc(100% - 49px - 5px - 2px); /* height of feedbar - top margin feedentries - unknown?! */
 overflow-y:scroll;
 margin-top:5px;
 }
